FIX: html list errors

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
       </section>
       <section class="main-section" id="Contribute_Documentation">
-        <header id="Contribute_Documentation">Header 5</header>
+        <header id="Contribute_Documentation">Contribute Documentation</header>
         <p>Parrafo 1</p>
         <p>Parrafo 2</p>
         
